Fix Resource Cache Not Filtered After Reference Handling
closes https://github.com/medizininformatik-initiative/torch/issues/676